src/index.css
@import "tailwindcss";

@layer base {
  /* Hide arrows from number inputs (Chrome, Safari, Edge, Opera) */
  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Hide arrows from number inputs (Firefox) */
  input[type="number"] {
    -moz-appearance: textfield;
  }
}

.watermark-container {
  position: relative;
  min-height: 100vh;
}

.watermark {
  position: absolute;
  top: 40%;
  left: 50%;
  opacity: 0.1;
  font-size: 100px;
  transform: translate(-50%, -50%) rotate(-45deg);
  pointer-events: none;
  z-index: 9999;
  text-transform: uppercase;
  white-space: nowrap;
  font-weight: 900;
}

@media print {
  body > :not(#bill-print-area) {
    display: none !important;
  }
  
  #bill-print-area {
    display: block !important;
    position: static !important;
    width: 210mm;
    margin: 0;
    padding: 0;
  }

  /* Page ki margins set karo taaki content na kate */
  @page {
    size: A4;
    margin: 10mm;
  }

  /* Buttons ko printout se hide karo */
  .no-print {
    display: none !important;
  }
}

/* Scrollbar Utility Classes */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}
.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}
.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

